[gd_scene load_steps=7 format=3 uid="uid://jmm71rgqfd1r"]

[ext_resource type="Theme" uid="uid://cgfdgl4ihd081" path="res://assets/themes/td_theme.tres" id="1_42mgb"]
[ext_resource type="Script" path="res://interfaces/UI/game_over/game_over.gd" id="2_a4bhp"]
[ext_resource type="Texture2D" uid="uid://bh2j3w7sn76or" path="res://interfaces/UI/game_over/assets/textures/gameover.png" id="2_rdkds"]

[sub_resource type="Animation" id="Animation_iswqo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sections/Title:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sections/Buttons:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(342, 143)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(469, 288.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sections/Title:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sections/Buttons:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0n8h5"]
resource_name = "show"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sections/Title:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sections/Buttons:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(228, 94), Vector2(860, 366)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(526, 313), Vector2(210, 177)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Sections/Title:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.7, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sections/Buttons:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svvxd"]
_data = {
"RESET": SubResource("Animation_iswqo"),
"show": SubResource("Animation_0n8h5")
}

[node name="GameOver" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -71.5
offset_right = 171.0
offset_bottom = 71.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_42mgb")
script = ExtResource("2_a4bhp")

[node name="Sections" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 40.0
offset_right = 302.0
offset_bottom = 103.0
theme_override_constants/separation = 10

[node name="Title" type="TextureRect" parent="Sections"]
visible = false
layout_mode = 2
offset_top = 29.0
offset_right = 780.0
offset_bottom = 124.0
size_flags_vertical = 6
size_flags_stretch_ratio = 1.25
texture = ExtResource("2_rdkds")
stretch_mode = 5

[node name="Buttons" type="HBoxContainer" parent="Sections"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_top = 192.0
offset_right = 780.0
offset_bottom = 256.0
size_flags_vertical = 6
theme_override_constants/separation = 50
alignment = 1

[node name="Retry" type="Button" parent="Sections/Buttons"]
layout_mode = 2
offset_left = 184.0
offset_right = 375.0
offset_bottom = 64.0
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.25
theme_override_font_sizes/font_size = 42
text = " RETRY "

[node name="Exit" type="Button" parent="Sections/Buttons"]
layout_mode = 2
offset_left = 425.0
offset_right = 596.0
offset_bottom = 64.0
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.25
theme_override_font_sizes/font_size = 42
text = "  EXIT  "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_svvxd")
}

[connection signal="pressed" from="Sections/Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Sections/Buttons/Exit" to="." method="_on_exit_pressed"]
